fix overflow

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -75,6 +75,7 @@
  * {
      -webkit-box-sizing: border-box;
      box-sizing: border-box;
+      
  }
 
  *:before,
@@ -82,21 +83,36 @@
      -webkit-box-sizing: border-box;
      box-sizing: border-box;
  }
+  
+ 
 
- ::-webkit-scrollbar {
-     /* width: 6px;*/
-     height: 6px;
- }
+* {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box
+}
 
- ::-webkit-scrollbar-thumb {
-     cursor: pointer;
-     background: #252525;
- }
+:after,
+:before {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 6px
+}
+
+::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    background: #fd4040
+}
 
  html,
  body {
      height: 100%;
-     /*  overflow: hidden;*/
+     width: 100vw;
+       overflow-x: hidden;
+    max-width: 100vw/*  overflow: hidden;*/
  }
 
  .top-scroll.active {
@@ -141,6 +157,7 @@
 -----------------------------------------*/
  .page {
      height: 100%;
+     width: 100vw;
      background: url('../Images/back2.svg');
  }
 
